--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,4 +1,31 @@
 i.Nav{
     background-color: white;
     border-bottom: 1px solid rgba(0, 0, 0, 0.0975);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+    -webkit-transition: height 0.2s ease-in-out;
+    transition: height 0.2s ease-in-out;
+    height: 77px;
+}
+.Nav-menus {
+    display: flex;
+    flex-direction: row;
+    height: 77px;
+    width: 70%;
+    margin: 0 auto;
+    padding: 26px 40px;
+}
+.Nav-brand-logo{
+    display: block;
+    background-position: 0px 0px;
+    /*add the logo here*/
+    background-image: url(../../IG_Name.png);
+    background-size: 172px 50px;
+    background-repeat: no-repeat;
+    height: 50px;
+    width: 172px;
+    
+
 }
