Added post component into frontend

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -21,7 +21,7 @@ i.Nav{
     display: block;
     background-position: 0px 0px;
     /*add the logo here*/
-    background-image: url(../../IG_Name.png);
+    background-image: url(../../Images/IG_Name.png);
     background-size: 172px 50px;
     background-repeat: no-repeat;
     height: 50px;
