--- a/frontend/src/components/Post/Post.css
+++ b/frontend/src/components/Post/Post.css
@@ -34,18 +34,18 @@
     }
     .Post-caption {
     font-family: Verdana, Geneva, sans-serif;
-    padding: 16px 16px;
+    padding: 8px 8px;
     }
     .Post-caption strong {
     font-family: Verdana, Geneva, sans-serif;
-    
     }
     .Post-comment{
-        padding: 16px 16px;
+        padding: 8px 8px;
+        white-space: pre-line;
         font-family: Verdana, Geneva, sans-serif;
     }
     .Post-add-comment{
-        padding: 16px 16px;
+        padding: 8px 8px;
     }
     .vjs-fade-out {
     display: none;
